# focusrite_decrusher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
src/: AudioReset.cpp  AudioReset.h  main.cpp  resource.h  resources.rc
